[gd_scene load_steps=9 format=3 uid="uid://cdoksexcakmop"]

[ext_resource type="PackedScene" uid="uid://y5a4e3ajuy2r" path="res://scenes/StonePlatform.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://datfp8kxjrjg" path="res://scenes/BlueShip.tscn" id="2"]
[ext_resource type="Script" path="res://scenes/PlatformBlue.gd" id="3"]
[ext_resource type="Script" path="res://scenes/ObjectiveArea.gd" id="4"]
[ext_resource type="Script" path="res://scenes/DeathArea.gd" id="5_56hve"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(138.75, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fre4v"]
size = Vector2(1152, 29)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pycs"]

[node name="MainLevel" type="Node"]

[node name="PlatformBlue" type="Node2D" parent="."]
position = Vector2(35, 565)
script = ExtResource("3")

[node name="StonePlatform" parent="PlatformBlue" instance=ExtResource("1")]

[node name="StonePlatform2" parent="PlatformBlue" instance=ExtResource("1")]
position = Vector2(70, 0)

[node name="BlueShip" parent="." instance=ExtResource("2")]
position = Vector2(72.7009, 421.901)
gravity_scale = 5.724
lock_rotation = true

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2(70.625, 40)
shape = SubResource("1")

[node name="DeathArea" type="Area2D" parent="."]
script = ExtResource("5_56hve")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(576, 633.5)
shape = SubResource("RectangleShape2D_fre4v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 382.0
offset_top = 222.0
offset_right = 765.0
offset_bottom = 377.0
color = Color(1, 1, 1, 0)

[node name="VictoryCard" type="Panel" parent="CanvasLayer" groups=["VictoryCard"]]
visible = false
offset_left = 382.0
offset_top = 222.0
offset_right = 765.0
offset_bottom = 377.0

[node name="Label" type="Label" parent="CanvasLayer/VictoryCard"]
layout_mode = 0
offset_top = 33.0
offset_right = 383.0
offset_bottom = 88.0
text = "You Win!!!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Button" type="Button" parent="CanvasLayer/VictoryCard"]
layout_mode = 0
offset_left = 142.0
offset_top = 104.0
offset_right = 238.0
offset_bottom = 135.0
tooltip_text = "Go to next level"
theme_override_font_sizes/font_size = 13
theme_override_styles/hover = SubResource("StyleBoxFlat_5pycs")
text = "Next Level"

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="DeathArea" to="DeathArea" method="_on_DeathArea_body_entered"]
[connection signal="pressed" from="CanvasLayer/VictoryCard/Button" to="ObjectiveArea" method="_on_button_pressed"]
