[gd_scene load_steps=9 format=3 uid="uid://cwkonxbdh6afu"]

[ext_resource type="PackedScene" uid="uid://dt21o5yireisx" path="res://scenes/GreenShip.tscn" id="1_8isow"]
[ext_resource type="Script" path="res://scenes/PlatformWhite.gd" id="2_2qhx3"]
[ext_resource type="PackedScene" uid="uid://btgbauu88avyt" path="res://scenes/SnowPlatform.tscn" id="2_oo1p4"]
[ext_resource type="Script" path="res://scenes/ObjectiveArea.gd" id="3_11dr5"]
[ext_resource type="Script" path="res://scenes/DeathArea.gd" id="5_tj4wt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w14b7"]
size = Vector2(169.375, 93.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_agnnt"]
size = Vector2(1152, 29)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xm0ja"]

[node name="MainLevel2" type="Node"]

[node name="GreenShip" parent="." instance=ExtResource("1_8isow")]
position = Vector2(70, 392)
gravity_scale = 5.724
lock_rotation = true

[node name="PlatformWhite" type="Node2D" parent="."]
script = ExtResource("2_2qhx3")

[node name="SnowPlatform" parent="PlatformWhite" instance=ExtResource("2_oo1p4")]
position = Vector2(36, 521)

[node name="StaticBody2D" parent="PlatformWhite" instance=ExtResource("2_oo1p4")]
position = Vector2(107, 521)

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource("3_11dr5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2(1065.69, 47.25)
shape = SubResource("RectangleShape2D_w14b7")

[node name="DeathArea" type="Area2D" parent="."]
script = ExtResource("5_tj4wt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(576, 633.5)
shape = SubResource("RectangleShape2D_agnnt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 382.0
offset_top = 222.0
offset_right = 765.0
offset_bottom = 377.0
color = Color(1, 1, 1, 0)

[node name="VictoryCard" type="Panel" parent="CanvasLayer" groups=["VictoryCard"]]
visible = false
offset_left = 382.0
offset_top = 222.0
offset_right = 765.0
offset_bottom = 377.0

[node name="Label" type="Label" parent="CanvasLayer/VictoryCard"]
layout_mode = 0
offset_top = 33.0
offset_right = 383.0
offset_bottom = 88.0
text = "You Win!!!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ResetButton" type="Button" parent="CanvasLayer/VictoryCard"]
offset_left = 142.0
offset_top = 104.0
offset_right = 238.0
offset_bottom = 135.0
tooltip_text = "Go to next level"
theme_override_font_sizes/font_size = 13
theme_override_styles/hover = SubResource("StyleBoxFlat_xm0ja")
text = "Back to Level 1"

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="DeathArea" to="DeathArea" method="_on_DeathArea_body_entered"]
[connection signal="pressed" from="CanvasLayer/VictoryCard/ResetButton" to="ObjectiveArea" method="_on_reset_button_pressed"]
